--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Demo Page</title>
+  <title>My Demo Pagetest</title>
 </head>
 <body>
   <h1>Hello from GitHub Actions 🚀</h1>
